--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,18 +1,18 @@
-<ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Home</ion-title>
-  </ion-navbar>
-</ion-header>
 
-<ion-content padding>
-  <h3>Ionic Menu Starter</h3>
+  <ion-header>
 
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
-
-  <button ion-button secondary menuToggle>Toggle Menu</button>
-</ion-content>
+      <ion-navbar>
+   
+      </ion-navbar>
+    
+    </ion-header>
+    
+  <ion-content>
+      <ion-grid style="height: 100%">
+          <ion-row justify-content-center align-items-center style="height: 100%">
+            <h1> Angular Note
+            </h1>
+          </ion-row>
+      </ion-grid>
+  </ion-content>
+  
